fix: remove negative margin so icons aren't cut off

--- a/styles.css
+++ b/styles.css
@@ -136,7 +136,7 @@ QPushButton {
 
 /* GLAZEWM WIDGET (LEFT) */
 .glazewm-workspaces {
-  margin-left: -8px;
+  padding-left: 0px;
 }
 .glazewm-workspaces:hover {
   background-color: none;
@@ -178,7 +178,6 @@ QPushButton {
 }
 .glazewm-workspaces .ws-btn .icon-1 {
   margin-left: 6px;
-  font-size: 10px;
 }
 .glazewm-workspaces .ws-btn .icon {
   padding: 0px 1px;
